# Tetris

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
Tetris/: Tetris.sln
Tetris/Tetris/: Tetris.qrc  Tetris.vcxproj  Tetris.vcxproj.filters
Tetris/Tetris/core/: app.cpp  app.h  block.cpp  block.h  game.cpp  game.h  gameScene.cpp  gameScene.h  gameView.cpp  main.cpp
Tetris/Tetris/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: app.cpp  app.h  block.cpp  block.h  block1.cpp  block1.h  blockmanager.cpp  blockmanager.h  blockshape.cpp  blockshape.h  game.cpp  game.h  gameScene.cpp  gameScene.h  main.cpp  test.cpp  test.h  tile.cpp  tile.h
src/core/Blocks/: block.cpp  block.h  jblock.cpp  jblock.h  lblock.cpp  lblock.h  reversezblock.cpp  reversezblock.h  square.cpp  square.h  straightblock.cpp  straightblock.h  tblock.cpp  tblock.h  zblock.cpp  zblock.h
src/gui/: mainwindow.cpp  mainwindow.ui  mainwindow.ui.bak
